--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@700&family=Inter:wght@400;700&display=swap"
         rel="stylesheet">
+    <!-- Estilos -->
     <link rel="stylesheet" href="style.css">
     <title>JS Game</title>
 </head>
@@ -33,7 +34,7 @@
 
 
 
-
+    <!-- Funções JavaScript -->
     <script src="app.js" defer></script>
 </body>
 
